<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HostDetailActivity"
    tools:showIn="@layout/activity_host_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textAppearance="@style/PropertyName"
            />

        <TextView
            android:id="@+id/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/unknown"
            android:textAppearance="@style/PropertyValue"/>

        <TextView
            android:id="@+id/version_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textAppearance="@style/PropertyName"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/unknown_version"
            android:textAppearance="@style/PropertyValue"/>

        <TextView
            android:id="@+id/cpe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CPE"
            android:textAppearance="@style/PropertyName"/>

        <TextView
            android:id="@+id/cpe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/undefined"
            android:textAppearance="@style/PropertyValue"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>