<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/host_general_properties"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/host_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyName"/>

        <TextView
            android:id="@+id/host_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.1.1.1"
            android:textAppearance="@style/PropertyValue" />

        <com.google.android.material.chip.Chip
            android:id="@+id/online_chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/online" />

        <TextView
            android:id="@+id/reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="State reason"
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/PropertyValue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/not_so_grey"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/host_mac_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac"
            android:textAppearance="@style/PropertyName" />

        <TextView
            android:id="@+id/host_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/host_mac_title"
            android:text="@string/unknown"
            android:textAppearance="@style/PropertyValue" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/host_mac_vendor_title"
            android:text="@string/mac_vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyName" />

        <TextView
            android:id="@+id/host_mac_vendor"
            android:layout_below="@id/host_mac_vendor_title"
            android:text="@string/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyValue"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/host_os_title"
            android:text="@string/os"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyName" />

        <TextView
            android:id="@+id/host_os"
            android:layout_below="@id/host_os_title"
            android:text="@string/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyValue"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/host_hostname_title"
            android:text="@string/hostname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyName" />

        <TextView
            android:id="@+id/host_hostname"
            android:layout_below="@id/host_hostname_title"
            android:text="@string/unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/PropertyValue"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/not_so_grey"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/services_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:textAppearance="@style/PropertyName"/>

        <TextView
            android:id="@+id/empty_services"
            android:layout_below="@id/services_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:text="@string/no_services"
            android:textAlignment="center"/>

        <ListView
            android:id="@+id/services_list"
            android:layout_below="@id/services_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:text="@string/no_services"
            android:divider="#00000000"
            android:dividerHeight="0dp"
            android:textAlignment="center"/>

    </RelativeLayout>

</LinearLayout>