<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main_wrapper">

    <LinearLayout
        android:id="@+id/scan_results_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/summary_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/summary_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summary_hosts_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary_hosts" />

            <TextView
                android:id="@+id/summary_scan_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary_time" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/not_so_grey"
            />

        <TextView
            android:id="@+id/discovered_hosts_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/discovered_hosts"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scan_result_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>