<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/new_netscan"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/network_address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/network_addr"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/network_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:ems="10"
            android:hint="@string/network_addr"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:backgroundTint="@color/focus_tint_list"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="/"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/netmask"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/mask"
            android:importantForAutofill="no"
            android:backgroundTint="@color/focus_tint_list"
            android:inputType="number|textPersonName|numberDecimal"
            android:singleLine="true" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:hint="@string/scan_type">

        <AutoCompleteTextView
            android:id="@+id/scan_type_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:editable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:text="@string/scan"
        android:textAlignment="center"
        android:textSize="14sp" />

</LinearLayout>