<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/scan_running_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.35000002"
    tools:visibility="visible"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/running_scan_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/searchlight"
        tools:srcCompat="@drawable/searchlight" />

    <TextView
        android:id="@+id/hint_scan_running"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/running_scan_image"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/scan_running"
        android:textAlignment="center"
        android:textColor="@color/almost_black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hint_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint_scan_running"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/hint_scan_running"
        android:textAlignment="center"
        android:textColor="@color/grey_light"
        android:textSize="16sp" />

    <Button
        android:id="@+id/stop_scan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint_time"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:text="@string/stop" />

</RelativeLayout>